<resources>
    <string name="app_name">Calypso Divelog</string>
    <string name="logbook">LogBook</string>
    <string name="equipment">Equipment</string>
    <string name="statistics">Statistics</string>
    <string name="planning">Planning</string>
    <string name="more">More</string>
    <string name="user_email">UserName / Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="create_new_account">Create new account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="create_account">Create account</string>
    <string name="connection_error_title">Connection Error</string>
    <string name="connection_error_message">Server connection error.</string>
    <string name="connect">Connect</string>
    <string name="reconnect">Reconnect</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lifetime_dives">Lifetime Dives</string>
    <string name="dive_number">Dive Number:</string>
    <string name="date">Date</string>
    <string name="close">Close</string>
    <string name="replace">Replace</string>
    <string name="delete">Delete</string>
    <string name="time">Time</string>
</resources>